# PicoRTC

./: CMakeLists.txt  README.md  pibuild.sh
lib/RTC/: RTC.cpp  RTC.h
src/: main.cpp
